# jaxe

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile.common  Makefile.libretro  README.md  jaxe_libretro.info
include/: chip8.h  constants.h
jni/: Android.mk
roms/chip8archive/: binding.ch8.dmp  blackrainbow.ch8.dmp  blackrainbow.ch8.sav
roms/chip8archive/xochip/: superneatboy.ch8.dmp
roms/optests/: c8_test.ch8
roms/optests/chip8-test-suite/: 8-scrolling.ch8.dmp
roms/revival/: README
src/: chip8.c  libretro.c  main.c
tests/: test.c  test_opcodes.c
